--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                 </div>
             </div>
 
+          <input type="text" id="PINFIELD">
+
             <hr>
 
             <footer>
@@ -93,6 +95,10 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <script src="js/vendor/jquery.cookie.js"></script>
+        <script src="js/vendor/sha1.js"></script>
+        <script src="js/vendor/codebird.js"></script>
+        <script src="js/twitter.js"></script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
 
