Update API Services into files and search by criteria.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         <script src="js/vendor/bootstrap.min.js"></script>
 
         <script src="js/main.js"></script>
+        <script src="js/projectAPIService.js"></script>
+        <script src="js/userAPIService.js"></script>
 
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
