--- a/project.html
+++ b/project.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="btn btn-success">Fund</div>
                     
-                        <div class="btn btn-primary">Share</div></div>
+                        <div class="btn btn-primary" id="share_in_twitter" data-hash="project1" data-loading-text="Tweeting...">Share</div></div>
                 
                 <div class="tags">
                     <h4>Tags</h4>
@@ -95,16 +95,14 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <script src="js/vendor/jquery.cookie.js"></script>
+        <script src="js/vendor/sha1.js"></script>
+        <script src="js/vendor/codebird.js"></script>
+        <script src="js/twitter.js"></script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
 
         <script src="js/main.js"></script>
-
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
+        <script src="js/project.js"></script>
     </body>
 </html>
