--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                             <li class="divider-vertical"></li>
 
                         </ul>
+                      <div class="navbar-form pull-right">
+                        <span id="user_profile_img"></span>
+                        <button id="login" class="btn btn-primary">login</button>
+                      </div>
                         
                     </div><!--/.nav-collapse -->
                 </div>
@@ -95,11 +99,6 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-        <script src="js/vendor/jquery.cookie.js"></script>
-        <script src="js/vendor/sha1.js"></script>
-        <script src="js/vendor/codebird.js"></script>
-        <script src="js/twitter.js"></script>
-
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/jquery.cookie.js"></script>
         <script src="js/vendor/sha1.js"></script>
@@ -108,12 +107,21 @@
 
         <script src="js/main.js"></script>
         <script src="js/product.js"></script>
-        
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
+
+        <!-- Modal -->
+        <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel">PIN</h3>
+          </div>
+          <div class="modal-body">
+            <input type="text" id="pin_number">
+          </div>
+          <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+            <button id="pinSubmit" class="btn btn-primary">Auth</button>
+          </div>
+        </div>
+
     </body>
 </html>
