Search by criteria for users and return result.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 
         <script src="js/main.js"></script>
         <script src="js/product.js"></script>
+        <script src="js/projectAPIService.js"></script>
+        <script src="js/userAPIService.js"></script>
 
         <!-- Modal -->
         <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
