include js in project.html

--- a/project.html
+++ b/project.html
@@ -102,6 +102,7 @@
 
         <script src="js/main.js"></script>
         <script src="js/product.js"></script>
+        <script src="js/project.js"></script>
 
         <!-- Modal -->
         <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
