--- a/project.html
+++ b/project.html
@@ -55,6 +55,7 @@
         </div>
 
         <div class="container">
+            <h3 id="project"></h3>
             <div class="span7">
                 <div id="imgpage">
                     <img src="http://placehold.it/800x300"/>
@@ -101,7 +102,7 @@
         <script src="js/twitter.js"></script>
 
         <script src="js/main.js"></script>
-        <script src="js/product.js"></script>
+        <script src="js/projectAPIService.js"></script>
         <script src="js/project.js"></script>
 
         <!-- Modal -->
