--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
                 </div>
             </div>
 
+          <input type="text" id="PINFIELD">
+
             <hr>
 
             <footer>
