--- a/project.html
+++ b/project.html
@@ -71,7 +71,7 @@
                     <div id="progress_bar">
                         <progress value="88" max="100"></progress>
                     </div>
-                    <div class="btn btn-success">Fund</div>
+                    <div class="btn btn-success" data-loading-text="Paying..." id="pay">Fund</div>
                     
                         <div class="btn btn-primary" id="share_in_twitter" data-hash="project1" data-loading-text="Tweeting...">Share</div></div>
                 
