--- a/index.html
+++ b/index.html
@@ -60,30 +60,34 @@
             
             <!-- Main hero unit for a primary marketing message or call to action -->
             <div class="hero-unit">
-                <h1>Hello, world!</h1>
-                <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                <h1>Scientifcal</h1>
+                <p>There are less government investments in research as austerity takes hold in the developed countries.</p>
+                <p>
+                  We at scientifica care about research and we believe we have the solution.
+                  By improving on existing crowdfunding strategies we will attract more and more investments into research and will begin a self perpetuating cycle of investments which will propel our understanding of science forward.
+                </p>
                 
             </div>
-            <h3 class='trending'>Trending projects</h3>
+            <h2 class='trending'>Trending projects</h2>
             <!-- Example row of columns -->
             <div class="row">
                 <div class="span4 project">
-                    <h2>Project 1</h2>
-                    <img src="http://placehold.it/480x240"/> 
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="project.html#40">View details &raquo;</a></p>
+                    <h3><em>"Developing a better mosquito repellant"</em></h3>
+                    <img src="/img/project1.jpg"/>
+                    <p>Tired of getting bitten by mosquitoes? We are looking for funding for a project that will look into natural extracts of plants and that will hopefully enable us to commercialize a natural mosquito repellant which will be non-toxic, durable and stronger than currently available mosquito repellants.</p>
+                    <p><a class="btn" href="project.html#1">View details &raquo;</a></p>
                 </div>
                 <div class="span4 project">
-                    <h2>Project 2</h2>
-                    <img src="http://placehold.it/480x240"/> 
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="project.html#40">View details &raquo;</a></p>
+                    <h3><em>"Developing stronger batteries"</em></h3>
+                    <img src="/img/project2.jpg"/>
+                    <p>Don’t want to carry a charger for your cell phone wherever you go? Want batteries that will enable your laptop to work for longer periods of time without a charge? We are looking into new chemical compounds that will enable us to build stronger batteries and your donation can help us get there faster.</p>
+                    <p><a class="btn" href="project.html#2">View details &raquo;</a></p>
                </div>
                 <div class="span4 project">
-                    <h2>Project 3</h2>
-                    <img src="http://placehold.it/480x240"/> 
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn" href="project.html#40">View details &raquo;</a></p>
+                    <h3><em>"How to make seatbelts that work for pets"</em></h3>
+                    <img src="/img/project3.jpg"/>
+                    <p>Love taking your pets on trips in your car? They become anxious when caged for long periods of time? We are researching the ergonomics behind seat-belts and how to make them pet-friendly enough that you can put the seat-belt on them and drive safely to your destination.</p>
+                    <p><a class="btn" href="project.html#3">View details &raquo;</a></p>
                 </div>
             </div>
 
