--- a/project.html
+++ b/project.html
@@ -119,5 +119,22 @@
             <button id="pinSubmit" class="btn btn-primary">Auth</button>
           </div>
         </div>
+
+        <div id="payModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel">Payment €</h3>
+          </div>
+          <div class="modal-body">
+            <select>
+              <option>10€</option>
+              <option>20€</option>
+            </select>
+          </div>
+          <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+            <button id="completePayment" class="btn btn-primary">Complete Payment</button>
+          </div>
+        </div>
     </body>
 </html>
