--- a/project.html
+++ b/project.html
@@ -124,6 +124,7 @@
             <h3 id="myModalLabel">Payment €</h3>
           </div>
           <div class="modal-body">
+            <h1>Referer: <span id="referer"></span></h1>
             <select>
               <option>10€</option>
               <option>20€</option>
