--- a/project.html
+++ b/project.html
@@ -91,11 +91,14 @@
 
       <h6>Promoters</h6>
       <ul style="list-style: none">
-        <li>
+        <li class='promoters'>
           <a href="https://twitter.com/charlisim/status/356089776283201538">
-            @charlisim
+            
             <img src="https://si0.twimg.com/profile_images/3320556564/9439c9a8ca4a64676e8cbd11caa42d69_bigger.jpeg">
+            
           </a>
+          <a href="https://twitter.com/charlisim/status/356089776283201538">@charlisim</a>
+          <div id='points'>0 points </div>
         </li>
       </ul>
     </div>
