Trends Update CSS

--- a/trends.html
+++ b/trends.html
@@ -61,15 +61,34 @@
             <div class="projects">
                 
             </div>
-            <div class="span7 ">
+            <div class="span7 project">
                 <div class="span2">
-                    <img src="http://placehold.it/140x100"/> 
+                    <img src="img/project3.jpg"/> 
                 </div>
                 <div class="span4">
-                    <div class="span4">Project Name</div>
-                    <div class="span4">45% founded(2000€ of 4200€)</div>
+                    <div class="span4"><strong>How to make seatbelts that work for pets</strong></div>
+                    <div class="span4"><progress value='88' max='100'></progress> 88%</div>
                 </div>
             </div>
+            <div class="span7 project">
+                <div class="span2">
+                    <img src="img/project2.jpg"/> 
+                </div>
+                <div class="span4">
+                    <div class="span4"><strong>Developing stronger batteries</strong></div>
+                    <div class="span4"><progress value='45' max='100'></progress> 45%</div>
+                </div>
+            </div>
+            <div class="span7 project">
+                <div class="span2">
+                    <img src="img/project1.jpg"/> 
+                </div>
+                <div class="span4">
+                    <div class="span4"><strong>Developing a better mosquito repellant</strong></div>
+                    <div class="span4"><progress value='18' max='100'></progress> 18%</div>
+                </div>
+            </div>
+        </div>
             <hr>
             </div>
             <footer>
