--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="index.html">Science Project</a>
+                    <a class="brand" href="index.html">Scientifcal</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             
