--- a/project.html
+++ b/project.html
@@ -42,7 +42,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="index.html">Scientifica</a>
+      <a class="brand" href="index.html">Scientifcal</a>
 
       <div class="nav-collapse collapse">
         <ul class="nav">
