--- a/projects.html
+++ b/projects.html
@@ -56,10 +56,42 @@
             </div>
         </div>
         <div class="container">
-            <div class="tags">
-                <div class="tag" data-tag='robotics'>Robotics</div>
-                <div class="tag" data-tag='enviorment'>Enviroment</div>
+
+          <div class="proj span7 project" data-tags='safety'>
+            <div class="span2">
+              <img src="img/project3.jpg"/>
             </div>
+            <div class="span4">
+              <div class="span4"><strong>How to make seatbelts that work for pets</strong></div>
+              <div class="span4"><progress value='88' max='100'></progress> 88%</div>
+            </div>
+          </div>
+          <div class="proj span7 project">
+            <div class="span2">
+              <img src="img/project2.jpg"/>
+            </div>
+            <div class="span4">
+              <div class="span4"><strong>Developing stronger batteries</strong></div>
+              <div class="span4"><progress value='45' max='100'></progress> 45%</div>
+            </div>
+          </div>
+          <div class="proj span7 project" data-tags='enviorment'>
+            <div class="span2">
+              <img src="img/project1.jpg"/>
+            </div>
+            <div class="span4">
+              <div class="span4"><strong>Developing a better mosquito repellant</strong></div>
+              <div class="span4"><progress value='18' max='100'></progress> 18%</div>
+            </div>
+          </div>
+        </div>
+
+
+          <div class="tags">
+            <div class="tag" data-tag='enviorment'>Environment</div>
+            <div class="tag" data-tag='safety'>Safety</div>
+            <div class="tag" data-tag='all'>All</div>
+          </div>
         </div>
         
         <hr>
@@ -81,6 +113,7 @@
 
         <script src="js/main.js"></script>
         <script src="js/product.js"></script>
+        <script src="js/projects.js"></script>
 
         <!-- Modal -->
         <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
