--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
             <h2 class='trending'>Trending projects</h2>
             <!-- Example row of columns -->
             <div class="row">
-                <div class="span4 project">
+                <div class="span4 project_home">
                     <h3><em>"Developing a better mosquito repellant"</em></h3>
                     <img src="/img/project1.jpg"/>
                     <p>Tired of getting bitten by mosquitoes? We are looking for funding for a project that will look into natural extracts of plants and that will hopefully enable us to commercialize a natural mosquito repellant which will be non-toxic, durable and stronger than currently available mosquito repellants.</p>
                     <p><a class="btn" href="project.html#1">View details &raquo;</a></p>
                 </div>
-                <div class="span4 project">
+                <div class="span4 project_home">
                     <h3><em>"Developing stronger batteries"</em></h3>
                     <img src="/img/project2.jpg"/>
                     <p>Don’t want to carry a charger for your cell phone wherever you go? Want batteries that will enable your laptop to work for longer periods of time without a charge? We are looking into new chemical compounds that will enable us to build stronger batteries and your donation can help us get there faster.</p>
                     <p><a class="btn" href="project.html#2">View details &raquo;</a></p>
                </div>
-                <div class="span4 project">
+                <div class="span4 project_home">
                     <h3><em>"How to make seatbelts that work for pets"</em></h3>
                     <img src="/img/project3.jpg"/>
                     <p>Love taking your pets on trips in your car? They become anxious when caged for long periods of time? We are researching the ergonomics behind seat-belts and how to make them pet-friendly enough that you can put the seat-belt on them and drive safely to your destination.</p>
